--- a/自製flex-box-table/flexboxTable.html
+++ b/自製flex-box-table/flexboxTable.html
@@ -47,7 +47,7 @@
         padding: 0;
     }
     tbody{
-        margin-top: 0.5em;
+        margin-top: 0.35em;
         flex-direction: column;
     }
     th{
@@ -62,19 +62,23 @@
     }
     tr{
         justify-content: space-around;
-        margin-bottom: 0.5em;
+        margin-bottom: 0.35em;
         /* padding-right: -1em; */
     }
     tbody tr:hover{
         opacity: 0.6;
     }
+    /* tr>td:first-child{
+        background: rgb(182, 182, 182);
+        flex: 0 0 10em;
+    } */
     td{
         /* width: 30%; */
         background-color: rgb(252, 186, 186);
         padding: 1em 0;
         border-radius: 0;
         justify-content: center;
-        flex: 0 1 30%;
+        flex: 1;
     }
     td+*{
         margin-left: 0.2em;
