--- a/自製flex-box-table/flexboxTable.html
+++ b/自製flex-box-table/flexboxTable.html
@@ -37,6 +37,8 @@
         cursor: text;
     }
     thead{
+        position: sticky;
+        top: 0;
         width: 100%;
         /* background-color: rgb(92, 198, 128); */
         background-color: rgb(162, 41, 64)
@@ -65,8 +67,11 @@
         margin-bottom: 0.35em;
         /* padding-right: -1em; */
     }
+    /* tbody tr{ opacity: 0.8; } */
     tbody tr:hover{
         opacity: 0.6;
+        /* box-shadow: -1px 3px 3px#c4c4c4;
+        transform: translateY(-2px); */
     }
     /* tr>td:first-child{
         background: rgb(182, 182, 182);
@@ -97,28 +102,76 @@
             <th>標題4</th>
         </thead>
         <tr>
+            <td>1</td>
+            <td>蘋果</td>
+            <td>鳳梨</td>
+            <td>巧克力蛋糕</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>5</td>
+            <td>6</td>
+            <td>蘋果</td>
+        </tr>
+        <tr class="blue">
+            <td>3</td>
+            <td>5</td>
+            <td>6</td>
+            <td>蘋果</td>
+        </tr>
+        <tr class="blue">
+            <td>4</td>
+            <td>5</td>
+            <td>6</td>
+            <td>蘋果</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>蘋果</td>
+            <td>鳳梨</td>
+            <td>巧克力蛋糕</td>
+        </tr>
+        <tr class="blue">
+            <td>6</td>
+            <td>5</td>
+            <td>6</td>
+            <td>蘋果</td>
+        </tr>
+        <tr>
+            <td>7</td>
+            <td>蘋果</td>
+            <td>鳳梨</td>
+            <td>巧克力蛋糕</td>
+        </tr>
+        <tr class="blue">
+            <td>8</td>
+            <td>5</td>
+            <td>6</td>
+            <td>蘋果</td>
+        </tr>
+        <tr>
+            <td>9</td>
+            <td>蘋果</td>
+            <td>鳳梨</td>
+            <td>巧克力蛋糕</td>
+        </tr>
+        <tr class="">
+            <td>10</td>
+            <td>5</td>
+            <td>6</td>
+            <td>蘋果</td>
+        </tr>
+        <tr>
             <td>香蕉</td>
             <td>蘋果</td>
             <td>鳳梨</td>
             <td>巧克力蛋糕</td>
         </tr>
         <tr>
-            <td>42</td>
-            <td>5</td>
-            <td>6</td>
+            <td>香蕉</td>
             <td>蘋果</td>
-        </tr>
-        <tr class="blue">
-            <td>42</td>
-            <td>5</td>
-            <td>6</td>
-            <td>蘋果</td>
-        </tr>
-        <tr class="blue">
-            <td>42</td>
-            <td>5</td>
-            <td>6</td>
-            <td>蘋果</td>
+            <td>鳳梨</td>
+            <td>巧克力蛋糕</td>
         </tr>
         <tr>
             <td>香蕉</td>
@@ -126,11 +179,35 @@
             <td>鳳梨</td>
             <td>巧克力蛋糕</td>
         </tr>
-        <tr class="blue">
-            <td>42</td>
-            <td>5</td>
-            <td>6</td>
+        <tr>
+            <td>香蕉</td>
             <td>蘋果</td>
+            <td>鳳梨</td>
+            <td>巧克力蛋糕</td>
+        </tr>
+        <tr>
+            <td>香蕉</td>
+            <td>蘋果</td>
+            <td>鳳梨</td>
+            <td>巧克力蛋糕</td>
+        </tr>
+        <tr>
+            <td>香蕉</td>
+            <td>蘋果</td>
+            <td>鳳梨</td>
+            <td>巧克力蛋糕</td>
+        </tr>
+        <tr>
+            <td>香蕉</td>
+            <td>蘋果</td>
+            <td>鳳梨</td>
+            <td>巧克力蛋糕</td>
+        </tr>
+        <tr>
+            <td>香蕉</td>
+            <td>蘋果</td>
+            <td>鳳梨</td>
+            <td>巧克力蛋糕</td>
         </tr>
         <tr>
             <td>香蕉</td>
