--- a/自製flex-box-table/flexboxTable.html
+++ b/自製flex-box-table/flexboxTable.html
@@ -8,7 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700&display=swap" rel="stylesheet"> 
 </head>
 <style>
-    body{
+    main{
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -28,7 +29,7 @@
         justify-content: space-around;
     }
     table{
-        width: 100%;
+        width: 80%;
         flex-direction: column;
         /* border: black solid 2px; */
         /* padding: 1em; */
@@ -93,128 +94,131 @@
     }
 </style>
 <body>
-    <h1>自訂樣式表格</h1>
-    <table>
-        <thead>
-            <th>標題1</th>
-            <th>標題2</th>
-            <th>標題3</th>
-            <th>標題4</th>
-        </thead>
-        <tr>
-            <td>1</td>
-            <td>蘋果</td>
-            <td>鳳梨</td>
-            <td>巧克力蛋糕</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>5</td>
-            <td>6</td>
-            <td>蘋果</td>
-        </tr>
-        <tr class="blue">
-            <td>3</td>
-            <td>5</td>
-            <td>6</td>
-            <td>蘋果</td>
-        </tr>
-        <tr class="blue">
-            <td>4</td>
-            <td>5</td>
-            <td>6</td>
-            <td>蘋果</td>
-        </tr>
-        <tr>
-            <td>5</td>
-            <td>蘋果</td>
-            <td>鳳梨</td>
-            <td>巧克力蛋糕</td>
-        </tr>
-        <tr class="blue">
-            <td>6</td>
-            <td>5</td>
-            <td>6</td>
-            <td>蘋果</td>
-        </tr>
-        <tr>
-            <td>7</td>
-            <td>蘋果</td>
-            <td>鳳梨</td>
-            <td>巧克力蛋糕</td>
-        </tr>
-        <tr class="blue">
-            <td>8</td>
-            <td>5</td>
-            <td>6</td>
-            <td>蘋果</td>
-        </tr>
-        <tr>
-            <td>9</td>
-            <td>蘋果</td>
-            <td>鳳梨</td>
-            <td>巧克力蛋糕</td>
-        </tr>
-        <tr class="">
-            <td>10</td>
-            <td>5</td>
-            <td>6</td>
-            <td>蘋果</td>
-        </tr>
-        <tr>
-            <td>香蕉</td>
-            <td>蘋果</td>
-            <td>鳳梨</td>
-            <td>巧克力蛋糕</td>
-        </tr>
-        <tr>
-            <td>香蕉</td>
-            <td>蘋果</td>
-            <td>鳳梨</td>
-            <td>巧克力蛋糕</td>
-        </tr>
-        <tr>
-            <td>香蕉</td>
-            <td>蘋果</td>
-            <td>鳳梨</td>
-            <td>巧克力蛋糕</td>
-        </tr>
-        <tr>
-            <td>香蕉</td>
-            <td>蘋果</td>
-            <td>鳳梨</td>
-            <td>巧克力蛋糕</td>
-        </tr>
-        <tr>
-            <td>香蕉</td>
-            <td>蘋果</td>
-            <td>鳳梨</td>
-            <td>巧克力蛋糕</td>
-        </tr>
-        <tr>
-            <td>香蕉</td>
-            <td>蘋果</td>
-            <td>鳳梨</td>
-            <td>巧克力蛋糕</td>
-        </tr>
-        <tr>
-            <td>香蕉</td>
-            <td>蘋果</td>
-            <td>鳳梨</td>
-            <td>巧克力蛋糕</td>
-        </tr>
-        <tr>
-            <td>香蕉</td>
-            <td>蘋果</td>
-            <td>鳳梨</td>
-            <td>巧克力蛋糕</td>
-        </tr>
-        <tr>
-            <td>香蕉</td>
-            <td>蘋果</td>
-            <td>鳳梨</td>
-            <td>巧克力蛋糕</td>
-        </tr>
-    </table>
+    <main>
+
+        <h1>自訂樣式表格</h1>
+        <table>
+            <thead>
+                <th>標題1</th>
+                <th>標題2</th>
+                <th>標題3</th>
+                <th>標題4</th>
+            </thead>
+            <tr>
+                <td>1</td>
+                <td>蘋果</td>
+                <td>鳳梨</td>
+                <td>巧克力蛋糕</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>5</td>
+                <td>6</td>
+                <td>蘋果</td>
+            </tr>
+            <tr class="blue">
+                <td>3</td>
+                <td>5</td>
+                <td>6</td>
+                <td>蘋果</td>
+            </tr>
+            <tr class="blue">
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+                <td>蘋果</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>蘋果</td>
+                <td>鳳梨</td>
+                <td>巧克力蛋糕</td>
+            </tr>
+            <tr class="blue">
+                <td>6</td>
+                <td>5</td>
+                <td>6</td>
+                <td>蘋果</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>蘋果</td>
+                <td>鳳梨</td>
+                <td>巧克力蛋糕</td>
+            </tr>
+            <tr class="blue">
+                <td>8</td>
+                <td>5</td>
+                <td>6</td>
+                <td>蘋果</td>
+            </tr>
+            <tr>
+                <td>9</td>
+                <td>蘋果</td>
+                <td>鳳梨</td>
+                <td>巧克力蛋糕</td>
+            </tr>
+            <tr class="">
+                <td>10</td>
+                <td>5</td>
+                <td>6</td>
+                <td>蘋果</td>
+            </tr>
+            <tr>
+                <td>香蕉</td>
+                <td>蘋果</td>
+                <td>鳳梨</td>
+                <td>巧克力蛋糕</td>
+            </tr>
+            <tr>
+                <td>香蕉</td>
+                <td>蘋果</td>
+                <td>鳳梨</td>
+                <td>巧克力蛋糕</td>
+            </tr>
+            <tr>
+                <td>香蕉</td>
+                <td>蘋果</td>
+                <td>鳳梨</td>
+                <td>巧克力蛋糕</td>
+            </tr>
+            <tr>
+                <td>香蕉</td>
+                <td>蘋果</td>
+                <td>鳳梨</td>
+                <td>巧克力蛋糕</td>
+            </tr>
+            <tr>
+                <td>香蕉</td>
+                <td>蘋果</td>
+                <td>鳳梨</td>
+                <td>巧克力蛋糕</td>
+            </tr>
+            <tr>
+                <td>香蕉</td>
+                <td>蘋果</td>
+                <td>鳳梨</td>
+                <td>巧克力蛋糕</td>
+            </tr>
+            <tr>
+                <td>香蕉</td>
+                <td>蘋果</td>
+                <td>鳳梨</td>
+                <td>巧克力蛋糕</td>
+            </tr>
+            <tr>
+                <td>香蕉</td>
+                <td>蘋果</td>
+                <td>鳳梨</td>
+                <td>巧克力蛋糕</td>
+            </tr>
+            <tr>
+                <td>香蕉</td>
+                <td>蘋果</td>
+                <td>鳳梨</td>
+                <td>巧克力蛋糕</td>
+            </tr>
+        </table>
+    </main>
 </body>
 </html>
